Fixes long auto expand input spilling out of parent.

--- a/tool-ui/src/main/webapp/style/v3/expandable.less
+++ b/tool-ui/src/main/webapp/style/v3/expandable.less
@@ -1,3 +1,4 @@
 input[type='text'].expandable {
+  max-width: 100%;
   min-width: 5em;
 }
