--- a/tool-ui/src/main/webapp/style/v3/repeatable.less
+++ b/tool-ui/src/main/webapp/style/v3/repeatable.less
@@ -869,6 +869,7 @@
 
   .addButtonContainer {
     float: left;
+    max-width: 100%;
     position: relative;
 
     > input[type=text] {
